--- a/problems/60.permutation-sequence.md
+++ b/problems/60.permutation-sequence.md
@@ -2,16 +2,15 @@
 
 https://leetcode-cn.com/problems/permutation-sequence/description/
 
-## 标签
+## 前置知识
 
 - 数学
 - 回溯
-- 找规律
 - factorial
 
 ## 公司
 
-Twitter
+- Twitter
 
 ## 题目描述
 
