--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -81,7 +81,7 @@ var longestConsecutive = function(nums) {
   let max = 0;
   let temp = 0;
   set.forEach(x => {
-    // 说明x是连续序列的开头元素
+    // 说明x是连续序列的开头元素。加这个条件相当于剪枝的作用，否则时间复杂度会退化到 N ^ 2
     if (!set.has(x - 1)) {
       temp = x + 1;
       while (set.has(y)) {
