--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -71,6 +71,26 @@ return Math.max(count, maxCount);
 
 ## 代码
 
+代码支持：Python，JS
+
+Python Code:
+
+```py
+class Solution:
+    def longestConsecutive(self, A: List[int]) -> int:
+        seen = set(A)
+        ans = 0
+        for a in A:
+            t = a
+            if t + 1 not in seen:
+                while t - 1 in seen:
+                    t -= 1
+            ans = max(ans, a - t + 1)
+        return ans
+```
+ 
+ JS Code:
+
 ```js
 /**
  * @param {number[]} nums
