--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -82,6 +82,7 @@ class Solution:
         ans = 0
         for a in A:
             t = a
+            #  if 的作用是剪枝
             if t + 1 not in seen:
                 while t - 1 in seen:
                     t -= 1
