--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -71,7 +71,33 @@ return Math.max(count, maxCount);
 
 ## 代码
 
-代码支持：Python，JS
+代码支持：Java, Python，JS
+
+Java Code:
+
+```java
+class Solution {
+    public int longestConsecutive(int[] nums) {
+        Set<Integer> set = new HashSet<Integer>();
+        int ans = 0;
+        for (int num : nums) {
+            set.add(num);
+        }
+        for(int i = 0;i < nums.length; i ++) {
+            int x = nums[i];
+            // 说明x是连续序列的开头元素
+            if  (!set.contains(x - 1)) {
+                while(set.contains(x + 1)) {
+                    x ++;
+                }
+            }
+            ans = Math.max(ans, x - nums[i] + 1);
+        }
+        return ans;
+        
+    }
+}
+```
 
 Python Code:
 
