--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -94,7 +94,7 @@ class Solution {
             ans = Math.max(ans, x - nums[i] + 1);
         }
         return ans;
-        
+
     }
 }
 ```
@@ -115,19 +115,19 @@ class Solution:
             ans = max(ans, a - t + 1)
         return ans
 ```
- 
- JS Code:
+
+JS Code:
 
 ```js
 /**
  * @param {number[]} nums
  * @return {number}
  */
-var longestConsecutive = function(nums) {
+var longestConsecutive = function (nums) {
   set = new Set(nums);
   let max = 0;
   let temp = 0;
-  set.forEach(x => {
+  set.forEach((x) => {
     // 说明x是连续序列的开头元素。加这个条件相当于剪枝的作用，否则时间复杂度会退化到 N ^ 2
     if (!set.has(x - 1)) {
       temp = x + 1;
