--- a/problems/128.longest-consecutive-sequence.md
+++ b/problems/128.longest-consecutive-sequence.md
@@ -63,10 +63,17 @@ return Math.max(count, maxCount);
 问题，内部我们`查找是否存在当前值的邻居元素`的过程如果使用数组，时间复杂度是 O(n),
 那么总体的复杂度就是 O(n^2)，完全不可以接受。怎么办呢？
 
-我们换个思路，用空间来换时间。比如用类似于 hashmap 这样的数据结构优化查询部分，将时间复杂度降低到 O(1), 代码见后面`代码部分`
+我们换个思路，用空间来换时间。比如用类似于 hashmap 这样的数据结构优化查询部分，将时间复杂度降低到 O(1)。
+
+代码上，我们先将 nums 存到哈希表中。然后找所有序列的起点 x， 递增 x 尝试**从 x 出发**能达到的最大长度。
+
+我们怎么知道哪些数字是序列的出发点呢？ 比如数组 [1, 3, 2] 我们怎么知道 1 是起点呢？ 我们只需要判断 x - 1 是否在哈希表中即可。
+
+代码见后面`代码部分`
 
 ## 关键点解析
 
+- 从所有的序列起点（终点也行）开始尝试
 - 空间换时间
 
 ## 代码
@@ -108,7 +115,7 @@ class Solution:
         ans = 0
         for a in A:
             t = a
-            #  if 的作用是剪枝
+            # 说明 t 是连续序列的开头元素。加这个条件相当于剪枝的作用，否则时间复杂度会退化到 N ^ 2
             if t + 1 not in seen:
                 while t - 1 in seen:
                     t -= 1
