--- a/problems/1332.remove-palindromic-sequences.en.md
+++ b/problems/1332.remove-palindromic-sequences.en.md
@@ -55,15 +55,13 @@ Have you encountered this question in a real interview?
 
 ## Idea
 
-This is another ”shaking clever" topic. Similar topics are [1297. maximum-number-of-occurrences-of-a-substrate] (https://github.com/azl397985856/leetcode/blob/77db8fa47c7ee0a14b320f7c2d22f7c61ae53c35/problems/1297.maximum-number-of-occurrences-of-a-substring.md )
+This is another ”shaking clever" topic. Similar topics are [1297. maximum-number-of-occurrences-of-a-substrate](https://github.com/azl397985856/leetcode/blob/77db8fa47c7ee0a14b320f7c2d22f7c61ae53c35/problems/1297.maximum-number-of-occurrences-of-a-substring.md)
 
 Since there are only two characters a and B. In fact, the most number of eliminations is 2. This is because we can eliminate a sub-sequence each time, instead of eliminating a sub-string. In this way, we can eliminate all 1s first and then all 2s (the same is true for eliminating 2s first), so that it only takes two times to complete. Is it possible to do it 0 times or 1 time? Yes.
 
 For example, in the case of one elimination given in the title, the example given in the title is “ababa”. We found that it is actually a palindrome string in itself, so it can be eliminated all at once. Then there is an idea：
 
--If s is a palindrome, then we need to eliminate it once
--Otherwise it takes two times
--Be sure to pay attention to special circumstances, for empty strings, we need 0 times
+-If s is a palindrome, then we need to eliminate it once -Otherwise it takes two times -Be sure to pay attention to special circumstances, for empty strings, we need 0 times
 
 If you interpret a palindrome, you only need two pointers to force it. For specific ideas, please refer to [125. Verify palindrome string](./125.valid-palindrome.md)
 
@@ -126,8 +124,7 @@ return 2;
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity:$O(1)$
+-Time complexity:$O(N)$ -Spatial complexity:$O(1)$
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
